push footer down using flex style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,14 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+/* General style */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* General project style */
+    color: #3a3a3a;
+}
 
 /*Header */
 header {
@@ -13,6 +20,8 @@ header {
 /* Main */
 main {
     background-color: lightblue;
+    /* Make main element take upsurplus space to push footer down */
+    flex: 1 0 auto;
 }
 /* Footer */
 footer {
