--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,7 @@ main {
     background-color: lightblue;
     /* Make main element take upsurplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 /* Footer */
 footer {
