--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,12 @@ footer {
     .nav-toggle-label {
         display: none;
     }
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
     main {
-        margin-top: 59.59px;
+        margin-top: 79px;
     }
 }
