--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ main {
 }
 /* Footer */
 footer {
-    background-color: orange;
+    background-color:#ffffff;
 }
 /* media query: tablets and larger (768px and up) */
 @media screen and (min-width:768px) {
