--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,17 @@ main {
     margin-top: 47px;
 }
 /* Footer */
-footer {
-    background-color:#ffffff;
+#social-network {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+#social-network i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
 /* media query: tablets and larger (768px and up) */
 @media screen and (min-width:768px) {
