--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,11 +73,18 @@ h1 {
 }
 /* Main */
 main {
-    background-color: lightblue;
+    
     /* Make main element take up surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
+/* hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+}
+
 /* Footer */
 #social-network {
     text-align: center;
