add why love with us section and articles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,11 +144,21 @@ main {
     main {
         margin-top: 79px;
     }
+    #reasons {
+        margin: 20px;
+        width: 90%;
+    }
+    #reasons > h2 {
+        font-size: 280%;
+        margin: 20px;
+        text-transform: uppercase;
+        justify-content: center;
+    }
     /* hero */ 
     #cover-text {
         width: 300px;  
         right: 50px;
-        
+
     }
 
 }
