--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,31 @@ main {
     position: relative;
 }
 
+#reasons {
+        margin: 20px auto;
+        width: 90%;
+    }
+
+#reasons h2 {
+        font-size: 280%;
+        margin-bottom: 20px;
+        text-align: center;
+        
+    }
+#benefits-physical > div, #benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+#benefits hr {
+        border-top: 1px solid #3a3a3a;
+        margin: 5px 0;
+}
+
+
 #cover-text {
     background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
@@ -144,16 +169,8 @@ main {
     main {
         margin-top: 79px;
     }
-    #reasons {
-        margin: 20px;
-        width: 90%;
-    }
-    #reasons > h2 {
-        font-size: 280%;
-        margin: 20px;
-        text-transform: uppercase;
-        justify-content: center;
-    }
+    
+    
     /* hero */ 
     #cover-text {
         width: 300px;  
