--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,13 @@ main {
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
+#circle-cover-bg {
+    width: 90vw;
+    height: 90vw;
+    background: url("../images/reasons-image.webp") no-repeat center center/cover;
+    margin-bottom: 20px;
+    
+}
 
 /* Footer */
 #social-network {
