--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,16 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
+
+/* media query: larger and landscape phones (576px and up) */
+@media screen and (min-width:576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+
+    }
+}
+
 /* media query: tablets and larger (768px and up) */
 @media screen and (min-width:768px) {
     /* header */ 
@@ -241,6 +251,11 @@ main {
         text-align: end;
         align-self: flex-end;
     }
+    /* Gallery*/
+    #photos {
+        column-count: 3;
+        
+    }
 
 }
 /* larger device (laptop desktop, 992px and up) */
@@ -248,6 +263,12 @@ main {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+    /* Gallery*/
+    #photos {
+        column-count: 4;
+        
+    }
+
 }
 /* larger device (laptop desktop, 1200px and up) */
 @media screen and (min-width:1200px) {
